<resources>
    <!-- APIs and Integrations -->
    <string name="parse_app_id">traveltrails</string>
    <!--<string name="google_api_key">AIzaSyCOhSebiVixAE8Aq5atvtzWJAhHuZH5l_U</string>-->
    <string name="google_api_key">AIzaSyDkD4R2rlb7BRRwDOm3E1G4iRGGRbtBbe8</string> <!-- huyen's 2nd key -->
    <string name="facebook_app_id">646488778862200</string>

    <!-- App related strings -->
    <string name="app_name">Travel</string>
    <string name="add_a_place">Add a place to trip</string>

    <string name="toolbar_title_create_story">Create Trip</string>
    <string name="toolbar_title_story_collage">Story: %1$s</string>

    <string name="view_map">View Map</string>
    <string name="view_collage">View Collage</string>
    <string name="share_story">Share Story</string>
    <string name="places_to_eat">Places To Eat</string>
    <string name="sights_to_see">Sights To See</string>

    <!-- Navigation drawer -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_find_users">Search Users</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_delete">Delete Account</string>

    <!-- Group strings by activity -->

    <!-- Home screen strings -->
    <string name="start_new_trip">Start a New Trip</string>
    <string name="destination_hint">Where do you want to go?</string>
    <string name="planned_trips">Planned Trips</string>
    <string name="past_trips">Past Trips</string>
    <string name="current_trip">Current Trip</string>

    <!-- Search User DialogFragment -->
    <string name="search_user">Find Friends</string>
    <string name="no_users_found">No users found :(</string>

    <!-- Create Trip -->
    <string name="default_trip_title">Trip to %1$s</string>
    <string name="hint_trip_title">Trip Title</string>
    <string name="hint_places_of_interest">Add Destination</string>
    <string name="error_trip_dates">Please select trip dates</string>
    <string name="error_no_place">Please add a place</string>
    <string name="confirm_story">Done</string>

    <!-- Story Activity -->
    <!-- Confirm Delete Trip Dialog -->
    <string name="confirm_delete">Are you sure you want to delete this trip?</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="cancel">Cancel</string>

    <!-- Trip Date Selection -->
    <string name="hint_trip_dates">Select Trip Dates</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="duration_label">Duration:</string>

    <!-- Sharing -->
    <string name="share_trip">Share Trip</string>
    <string name="share_label">Sharing</string>
    <string name="share">Share</string>
    <string name="unshare">Unshare</string>

    <!-- Check-in -->
    <string name="checkin">Check-in</string>
    <string name="forgot_checkin">Forgot to check-in?</string>
    <string name="checkin_date">Check-in Date</string>

    <!-- Profile Activity Strings -->
    <string name="followers">Followers</string>
    <string name="following">Following</string>

    <!-- Place Detail Activity -->
    <string name="open">Open now</string>
    <string name="closed">Closed now</string>
    <string name="free">Free</string>
    <string name="reviews">Reviews</string>
    <string name="directions">DIRECTIONS</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>

    <!-- Places suggestion activity -->
    <string name="saved_places">Places Added: </string>
    <string name="create_story">Create Story</string>

    <!-- Maps Story activity -->
    <string name="google_maps_api_key">AIzaSyAS09XEATHFoSrPgxeC0ItjctwmxdLi9AQ</string>

    <!-- Media Collage Activity -->
    <string name="camera">Take Photo</string>
    <string name="photo_library">Add Photo</string>
    <string name="note">Add Note</string>
    <string name="hint_compose_note">Memories go here...</string>
    <string name="save">Save</string>
    <string name="set_photo_label">Set photo as...</string>
    <string name="set_photo_none">none</string>
    <string name="set_story_place_cover">Story cover</string>
    <string name="set_trip_cover">Trip cover</string>
    <string name="set_user_cover">Profile cover</string>
    <string name="set_user_profile">Profile photo</string>
    <string-array name="set_photo_options_array">
        <item>@string/set_photo_none</item>
        <item>@string/set_story_place_cover</item>
        <item>@string/set_trip_cover</item>
        <item>@string/set_user_cover</item>
        <item>@string/set_user_profile</item>
    </string-array>
    <string name="no_media">Nothing to look at here :/</string>

</resources>
