<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_info"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/places_ic_search"
            android:title="@string/nav_find_users" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_logout" />
        <item
            android:id="@+id/nav_delete_account"
            android:icon="@drawable/ic_delete"
            android:title="@string/nav_delete" />
    </group>
</menu>