<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.CreateStoryActivity"
    tools:showIn="@layout/activity_create_story">

    <EditText
        android:id="@+id/etTripTitle"
        android:hint="@string/hint_trip_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/tabTextAppearance"/>

    <TextView
        android:id="@+id/tvTripDates"
        android:layout_below="@id/etTripTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space"
        android:layout_marginTop="@dimen/space"
        android:text="@string/hint_trip_dates"
        android:drawableLeft="@drawable/ic_calendar"
        android:drawableStart="@drawable/ic_calendar"
        android:gravity="center_vertical"/>

    <TextView
        android:id="@+id/tvAddNewPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/space"
        android:layout_alignBottom="@id/tvTripDates"
        android:drawableLeft="@drawable/ic_add"
        android:drawableStart="@drawable/ic_add"
        android:gravity="center_vertical"
        style="@style/textViewWithDrawable"
        android:text="@string/hint_places_of_interest"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvStoryPlaces"
        android:layout_below="@+id/tvAddNewPlace"
        android:layout_marginTop="@dimen/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btCreateTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_alignParentBottom="true"
        android:text="@string/confirm_story" />

</RelativeLayout>