<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkin_date"
        android:layout_marginBottom="@dimen/space"
        android:textAppearance="@style/subheaderText"/>

    <TextView
        android:id="@+id/tvDate"
        android:layout_below="@+id/tvDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Nov 23, 2016"
        android:layout_marginBottom="@dimen/space"
        android:textAppearance="@style/body1Text"/>

    <View
        android:id="@+id/viewSeparator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvDate"
        android:background="@color/lightGray" />

    <ScrollView
        android:id="@+id/calendarHolder"
        android:layout_below="@+id/viewSeparator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space">
        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </ScrollView>

    <Button
        android:id="@+id/btnSave"
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendarHolder"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

    <Button
        android:id="@+id/btnCancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/calendarHolder"
        android:layout_toLeftOf="@id/btnSave"
        android:layout_toStartOf="@id/btnSave"
        style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog" />

</RelativeLayout>