<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.codepath.travel.activities.HomeActivity">

        <android.support.v7.widget.Toolbar
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/toolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:fitsSystemWindows="true"
            android:minHeight="?attr/actionBarSize"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:background="?attr/colorPrimaryDark">
        </android.support.v7.widget.Toolbar>

        <TextView
            android:id="@+id/tvPlannedTrips"
            android:text="@string/planned_trips"
            android:textStyle="bold"
            android:layout_below="@id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:id="@+id/flPlannedContainer"
            android:layout_below="@+id/tvPlannedTrips"
            android:layout_width="match_parent"
            android:layout_height="@dimen/trip_horizontal_list_height"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/tvCurrentTrip"
            android:text="@string/current_trip"
            android:textStyle="bold"
            android:layout_below="@+id/flPlannedContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:id="@+id/flCurrentContainer"
            android:layout_below="@+id/tvCurrentTrip"
            android:layout_width="match_parent"
            android:layout_height="@dimen/single_trip_height"
            android:layout_marginBottom="@dimen/margin"/>

        <TextView
            android:id="@+id/tvPastTrips"
            android:text="@string/past_trips"
            android:textStyle="bold"
            android:layout_below="@+id/flCurrentContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:id="@+id/flPastContainer"
            android:layout_below="@+id/tvPastTrips"
            android:layout_width="match_parent"
            android:layout_height="@dimen/trip_horizontal_list_height"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_new_trip"
            android:src="@drawable/ic_fab"
            app:backgroundTint="@color/colorAccent"
            app:fabSize="normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            app:layout_anchorGravity="bottom|right|end"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>
</android.support.v4.widget.DrawerLayout>
